Version 3.1.0dev:

* Experimental floppy file picker dialogs (--enable-libnfd).
* New shortcut Mod+F9 to toggle between chipset and RTG display.
* Bridgeboard & VGA available and works with custom uae_* options.
* Fixed mouse integration.
* Only do LF <-> CRLF clipboard conversion on Windows [BastyCDGS].
* Console debugger can be used also in Windows.
* Lots of fixes to restore functionality after the merge.
* Updated emulation core from WinUAE 4210 (big merge).

Version 3.0.0dev:

* Show error during configure if OpenAL is not found.
* More controller configs.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:

* Added controller config for DualShock 4 v2.
* Change default for bezel option to 0 (off).

Version 2.9.11dev:

* Linux: Automatically uses (Feral Interactive) GameMode daemon if available.
* New option game_mode = 0 to disable above mentioned feature.
* Linux: Warn if running with a CPU governor other than performance.
* New option governor_warning = 0 to to disable above mentioned warning.
* Fixed support for multiple mice also on Windows.

Version 2.9.9dev:

* Added 8BitDo controller configurations, updated dualshock 3 for Linux.
* Fixed mouse integration.
* Fixed support for multiple mice (was accidentally disabled).
* More deterministic creation of fs-uae.dat [bmwiedemann].
* HAM6 on AGA fix [sonnenscheinchen].
* Imported updated translations from crowdin.com.

Version 2.9.8dev:

* New option whdload_quit_key to gracefully quit slaves.
* Do not alias mouse clicks when joystick_port_0_autoswitch is off.
* Added Build-Conflicts: libroar-dev to fix building on OBS.
* Added sharp-bilinear-simple.shader [rsn8887].
* New options window_hidden, window_minimized [cnvogelg].
* Removed GLee from source.
* Fixed JIT direct access on modern Linux distributions.
* Changed default sync method on Windows to swap-finish.
* Updated bezel.
* New option: frame_time (can be used to limit emulation time before vsync).