@@ -8,7 +8,11 @@
 extern "C" {
 #endif
 
-void uae_clipboard_update(void);
+// Clipboard functions
+
+char *uae_clipboard_get_text(void);
+void uae_clipboard_free_text(char *text);
+void uae_clipboard_put_text(const char *text);
 
 /* Sets uaem metadata write flags based on chars in flags. You only need
  * to call this function to set non-default behavior. */
